fixing coursework alignment for smaller devices

--- a/style/about.css
+++ b/style/about.css
@@ -604,3 +604,8 @@ body {
     margin-top: -5%;
     padding-bottom: 20px;
 }
+@media screen and (max-width: 480px) {
+    .courseworkTitle {
+        margin-top: 2%;
+    }
+}
